# task_pipeline

./: .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  pytest.ini
docs/design/drawio/: pipeline_v0_1.drawio
task_pipeline/pipeline/: __init__.py  abstract_pipeline.py  base_pipeline.py
task_pipeline/pipeline/event/: __init__.py  abstract_event.py  decorator.py
task_pipeline/pipeline/task/: __init__.py  abstract_task.py  base_task.py  conditional_task.py  decorator.py  exception.py
tests/: test_base.py
tests/unit/pipeline/event/: test_hook.py
tests/unit/pipeline/task/: test_base_task.py
